--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: #f2e3bc;
-  font-family: "Noto Sans Regular", sans-serif;
+  font-family: "Lora Regular", sans-serif;
 }
 
 input[type="text"] {
@@ -21,9 +21,15 @@ textarea {
   font-family: "Archiv Grotesk";
   src: url("/Font/ArchivGroteskTrial-RegularTrial.otf") format("opentype");
 }
+
 @font-face {
   font-family: "Noto Sans Regular";
   src: url("/Font/Noto_Sans/static/NotoSans-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Lora Regular";
+  src: url("/Font/Lora/static/Lora-Regular.ttf");
 }
 
 .archivFont {
@@ -37,7 +43,11 @@ textarea {
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
   40% {
